# stateright

./: .gitignore  CHANGES.md  Cargo.nix  Cargo.toml  LICENSE  README.md  bench.sh  flake.nix
.github/workflows/: rust.yml
examples/: 2pc.rs  bench.rs  increment.rs  increment_lock.rs  interaction.rs  linearizable-register.rs  lww-register.rs  paxos.rs  raft.rs  replicated-processor.rs  serve.rs  single-copy-register.rs  timers.rs  wor.rs
examples/bench/: main.rs  two_phase_commit.rs  write_once_register.rs
examples/state_machines/: mod.rs  two_phase_commit.rs  write_once_register.rs
src/: actor.rs  checker.rs  explorer.rs  has_discoveries.rs  job_market.rs  lib.rs  report.rs  semantics.rs  test_util.rs  util.rs
src/actor/: actor_test_util.rs  mod.rs  model.rs  model_state.rs  network.rs  ordered_reliable_link.rs  register.rs  spawn.rs  system.rs  timers.rs  write_once_register.rs
src/checker/: bfs.rs  dfs.rs  explorer.rs  on_demand.rs  path.rs  reindex.rs  representative.rs  rewrite.rs  rewrite_plan.rs  simulation.rs  sym.rs  visitor.rs
src/examples/: mod.rs  two_phase_commit.rs
src/semantics/: consistency_tester.rs  linearizability.rs  register.rs  sequential_consistency.rs  vec.rs  write_once_register.rs
src/util/: choice.rs  densenatmap.rs  vector_clock.rs
ui/: app.css  app.js  index.htm
