[package]
name = "stateright"
version = "0.30.0"
authors = ["Jonathan Nadal <jon.nadal@gmail.com>"]
license = "MIT"
edition = "2021"

description = "A model checker for implementing distributed systems."
homepage = "https://www.stateright.rs"
repository = "https://github.com/stateright/stateright"
readme = "README.md"
categories = ["algorithms", "concurrency", "development-tools", "network-programming", "simulation"]
keywords = ["actor", "model-checking", "paxos", "raft", "simulation"]

[dependencies]
ahash = "0.3"
actix-web = "1.0"
choice = "0.0.2"
crossbeam-utils = "0.7"
dashmap = "3.11"
id-set = "0.2.2"
log = "0.4"
nohash-hasher = "0.2.0"
parking_lot = "0.11"
rand = { version = "0.7", features = ["small_rng"] }
serde = { version = "1.0", features = ["rc"] }

[dev-dependencies]
env_logger = "0.7"
lazy_static = "1.4.0"
num_cpus = "1.13"
pico-args = "0.4"
serde_json = "1.0"
