[package]
name = "stateright"
version = "0.31.0"
authors = ["Jonathan Nadal <jon.nadal@gmail.com>"]
license = "MIT"
edition = "2021"

description = "A model checker for implementing distributed systems."
homepage = "https://www.stateright.rs"
repository = "https://github.com/stateright/stateright"
readme = "README.md"
categories = ["algorithms", "concurrency", "development-tools", "network-programming", "simulation"]
keywords = ["actor", "model-checking", "paxos", "raft", "simulation"]

[dependencies]
ahash = "0.8"
tiny_http = "0.12"
choice = "0.0.2"
crossbeam-utils = "0.8"
dashmap = "6.1"
id-set = "0.2"
log = "0.4"
nohash-hasher = "0.2"
parking_lot = "0.12"
rand = "0.9"
serde = { version = "1.0", features = ["rc", "derive"] }
serde_json = "1.0"

[dev-dependencies]
env_logger = "0.11"
lazy_static = "1.5"
num_cpus = "1.17"
pico-args = "0.5"
